fix(cli): add support for `--agent-id` flag and update docs/i18n for StackSpot integration
- Introduced `--agent-id` flag to override the agent ID specifically for StackSpot.
- Updated CLI help, README files, and i18n translations to include the new flag.
- Improved timeout message clarity in translations.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -104,8 +104,9 @@
   "help.command.oneshot_prompt": "Alias for -p.",
   "help.command.oneshot_provider": "Overrides the provider (e.g., --provider OPENAI).",
   "help.command.oneshot_model": "Overrides the model (e.g., --model gpt-4o-mini).",
+  "help.command.oneshot_agent_id": "Overrides agent (stackSpot only)-(e.g. --agent-id 1290XSBD00384).",
   "help.command.oneshot_max_tokens": "Overrides the maximum tokens for the response.",
-  "help.command.oneshot_timeout": "Timeout for the call (e.g., --timeout 5m, default: 5m).",
+  "help.command.oneshot_timeout": "Timeout for the call command (e.g., --timeout 5m, default: 5m).",
   "help.command.oneshot_no_anim": "Disables animations (useful in scripts/CI).",
   "help.command.oneshot_auto_exec": "In one-shot agent mode, automatically executes the first suggested command if safe.",
   "help.command.oneshot_pipes": "Piping (stdin): Send data via pipe (e.g., git diff | chatcli -p \"Summarize changes.\").",
