--- a/i18n/locales/pt-BR.json
+++ b/i18n/locales/pt-BR.json
@@ -104,8 +104,9 @@
   "help.command.oneshot_prompt": "Alias de -p.",
   "help.command.oneshot_provider": "Sobrescreve o provedor (ex.: --provider OPENAI).",
   "help.command.oneshot_model": "Sobrescreve o modelo (ex.: --model gpt-4o-mini).",
+  "help.command.oneshot_agent_id": "Sobrescreve o agente (apenas para stackSpot)-(ex.: --agent-id 1290XSBD00384).",
   "help.command.oneshot_max_tokens": "Sobrescreve o máximo de tokens para a resposta.",
-  "help.command.oneshot_timeout": "Timeout da chamada (ex.: --timeout 5m, padrão: 5m).",
+  "help.command.oneshot_timeout": "Timeout da chamada para o comando (ex.: --timeout 5m, padrão: 5m).",
   "help.command.oneshot_no_anim": "Desabilita animações (útil em scripts/CI).",
   "help.command.oneshot_auto_exec": "No modo agente one-shot, executa o primeiro comando sugerido automaticamente se for seguro.",
   "help.command.oneshot_pipes": "Uso com pipes (stdin): Envia dados via pipe (ex.: git diff | chatcli -p \"Resuma as mudanças.\").",
