feat(cli): add support for updating contexts and enhance context creation
- Implemented `/context update` command to modify existing contexts, allowing updates to paths, mode, description, and tags.
- Added `--force` option to `/context create` for overwriting existing contexts.
- Enhanced CLI autocomplete and help descriptions to reflect new update features and flags.
- Updated translations for new messages and improved localization consistency.

--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -425,5 +425,11 @@
   "context.import.error.failed": "Error importing context: %v",
   "context.import.success": " ✅ Context '%s' imported successfully",
 
-  "context.metrics.header": " 📊 CONTEXT METRICS"
+  "context.metrics.header": " 📊 CONTEXT METRICS",
+
+  "context.update.usage": "Usage: /context update <name> [<paths...>] [--mode <mode>] [--description <text>] [--tags <tag1,tag2>]",
+  "context.update.processing": " 🔄 Updating context...",
+  "context.update.error.failed": "Error updating context: %v",
+  "context.update.success": " ✅ Context updated successfully!",
+  "context.create.force_tip": "Tip: Use --force to overwrite an existing context"
 }
