feat(docs): expand ChatCLI documentation with recipes, cookbook index, and advanced workflows
- Added practical recipes for safe refactoring, multi-project workflows, and release notes automation.
- Introduced a "Cookbook" section with structured guides to optimize ChatCLI use cases.
- Improved i18n support with additional translations in the interface.
- Updated examples in persistent contexts, non-interactive mode, and session management sections.

--- a/ghpages/themes/lotusdocs/i18n/en.toml
+++ b/ghpages/themes/lotusdocs/i18n/en.toml
@@ -2,22 +2,22 @@
     other = "Select your language"
 
 [search_title]
-    other = "Search"
+    other = "Pesquisar"
 
 [search_navigate]
-    other = "to navigate"
+    other = "para navegar"
 
 [search_select]
-    other = "to select"
+    other = "para selecionar"
 
 [search_close]
-    other = "to close"
+    other = "para fechar"
 
 [search_cancel]
-    other = "cancel"
+    other = "Sair"
 
 [search_no_results]
-    other = "No results for"
+    other = "Sem resultados para"
 
 [feedback_yes]
     other = "Yes"
