feat(plugins): migrate and enhance multiple plugins, improve agent mode functionality
- Migrated and improved `@docker-run` plugin to support volume mapping and environment variables.
- Introduced `@wikipedia` plugin for article search and summaries.
- Added i18n enhancements for better error handling and user prompts regarding tool arguments.
- Enhanced agent mode with resilient argument parsing using `shlex` and improved error handling for malformed tool args.
- Updated documentation to reflect plugin architecture and agent workflow.

--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -431,5 +431,9 @@
   "agent.error.tool_not_found": "Error: the tool '%s' you tried to use was not found. Please choose one from the list or generate a shell command.",
   "agent.feedback.tool_output": "The tool '%s' was executed and returned the following:\n\n<tool_output>\n%s\n</tool_output>\n\nBased on this, what is the next step?",
   "agent.error.max_turns_reached_context": " ⚠️ The agent stopped after reaching the maximum limit of %d turns to prevent infinite loops. It did not reach a final solution.",
-  "agent.feedback.last_thought": "Here is the agent's last thought process:"
+  "agent.feedback.last_thought": "Here is the agent's last thought process:",
+  "agent.error.invalid_tool_args": "Error: The arguments you provided for the tool '%s' were malformed: %v. Please correct the quoting and try again.",
+  "agent.multiline_input_tip": "(Enter a single '.' on a new line to finish)",
+  "agent.prompt.additional_context": "\n ➤ Provide additional context or instructions: ",
+  "agent.output_header": "\n--- Command Output ---"
 }
