feat(plugins): improve JSON encoding and error handling across plugins
- Enhanced error handling during JSON encoding with clear messages and graceful exits.
- Improved directory traversal in `@lotus-scan` to log inaccessible paths without interrupting execution.
- Updated multiple plugins (`@wikipedia`, `@docker-run`, `@hackernews`, etc.) to handle JSON unmarshalling errors with better feedback.
- Expanded i18n error messages for consistent and localized feedback.
- Incremented plugin versions where applicable to reflect enhancements.

--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -414,6 +414,7 @@
   "plugin.install.error.tempdir": " ❌ Error creating temporary directory: %v",
   "plugin.install.error.clone": " ❌ Error cloning repository: %v",
   "plugin.install.error.build": " ❌ Error compiling plugin: %v\nOutput: %s",
+  "plugin.install.error.chmod": "❌ Error setting executable permission on plugin: %v",
   "plugin.install.success": " ✅ Plugin '%s' installed successfully!",
   "plugin.uninstall.usage": "Usage: /plugin uninstall <plugin-name>",
   "plugin.uninstall.error": " ❌ Error uninstalling plugin '%s': %v",
