feat(cli): add one-shot execution for coder mode and improve translations
- Introduced `/coder` one-shot functionality for non-interactive task execution, retaining full ReAct loop and tool/plugin compatibility.
- Updated localized help messages in `en-US`, `pt-BR`, and `en` to include coder mode details.
- Improved error handling and prompts for coder mode by enforcing tool call usage over legacy command blocks.

--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -61,6 +61,12 @@
   "help.command.command_ai_context": "Same as above, but adds context/question.",
   "help.command.command_ai_context_example": "Ex: @command --ai cat err.log > summarize this error",
   "help.section.agent": "Agent Mode (Task Execution)",
+  "help.section.coder": "Coder Mode (Software Engineering)",
+  "help.command.coder": "Starts software engineer mode (uses tools/plugins via <tool_call>).",
+  "help.command.coder_example": "Example: /coder fix failing tests and apply minimal refactor",
+  "help.command.coder_notes": "Notes:",
+  "help.command.coder_note_plugin": "• Requires the @coder plugin installed (see: /plugin list).",
+  "help.command.coder_note_auto_tools": "• Runs tools automatically (ReAct loop).",
   "help.command.agent": "Asks the AI to plan and execute commands to solve a task.",
   "help.command.run": "An alias for the /agent command.",
   "help.command.agent_example": "Ex: /agent list all .go files and count their lines",
