--- a/i18n/locales/pt-BR.json
+++ b/i18n/locales/pt-BR.json
@@ -61,6 +61,12 @@
   "help.command.command_ai_context": "Igual ao anterior, mas adiciona um contexto/pergunta.",
   "help.command.command_ai_context_example": "Ex: @command --ai cat err.log > resuma este erro",
   "help.section.agent": "Modo Agente (Execução de Tarefas)",
+  "help.section.coder": "Modo Coder (Engenharia de Software)",
+  "help.command.coder": "Inicia o modo engenheiro de software (usa ferramentas/plugins via <tool_call>).",
+  "help.command.coder_example": "Exemplo: /coder corrigir testes quebrando e aplicar refactor mínimo",
+  "help.command.coder_notes": "Observações:",
+  "help.command.coder_note_plugin": "• Requer o plugin @coder instalado (ver: /plugin list).",
+  "help.command.coder_note_auto_tools": "• Executa ferramentas automaticamente (loop ReAct).",
   "help.command.agent": "Pede à IA para planejar e executar comandos para resolver uma tarefa.",
   "help.command.run": "Um atalho (alias) para o comando /agent.",
   "help.command.agent_example": "Ex: /agent liste todos os arquivos .go e conte suas linhas",
