feat(remote,paste): add remote resource discovery and paste detection
- Add 7 new gRPC RPCs for remote plugin/agent/skill discovery,
  execution, and download (ListRemotePlugins, ListRemoteAgents,
  ListRemoteSkills, GetAgentDefinition, GetSkillContent,
  ExecuteRemotePlugin, DownloadPlugin)
- Implement server-side handlers exposing plugins, agents, and skills
  to connected clients via gRPC
- Create RemotePlugin wrapper implementing Plugin interface for
  transparent remote plugin execution
- Auto-discover remote resources on connect and clean up on disconnect
- Add RegisterRemotePlugin/ClearRemotePlugins to plugin Manager
- Extend Instance CRD with AgentProvisionSpec and PluginProvisionSpec
- Update operator controller with volume mounts for agents/skills
  ConfigMaps and plugins (PVC or init container)
- Add Helm chart support for agents, skills, and plugins provisioning
  (inline definitions, existing ConfigMaps, init container images)
- Implement BracketedPasteParser wrapping go-prompt ConsoleParser for
  paste detection via ANSI bracketed paste mode
- Add paste detection in agent mode (getInput/getMultilineInput) via
  DetectInLine helper
- Add i18n strings for paste detection and remote resources
- Update all documentation (README, README_EN, operator README, ghpages)

--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -458,5 +458,10 @@
   "help.command.persona_load": "Loads a specific agent with its skills.",
   "help.command.persona_skills": "Lists all available skills.",
   "help.command.persona_show": "Shows details of the active agent and its prompt.",
-  "help.command.persona_off": "Deactivates the current agent, returning to default behavior."
+  "help.command.persona_off": "Deactivates the current agent, returning to default behavior.",
+
+  "remote.resources.available": "Server has %d plugins, %d agents, %d skills available",
+
+  "paste.detected": "📋 Pasted (%d chars, %d lines)",
+  "paste.detected.short": "📋 Pasted (%d chars)"
 }
