--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -458,5 +458,10 @@
   "help.command.persona_load": "Loads a specific agent with its skills.",
   "help.command.persona_skills": "Lists all available skills.",
   "help.command.persona_show": "Shows details of the active agent and its prompt.",
-  "help.command.persona_off": "Deactivates the current agent, returning to default behavior."
+  "help.command.persona_off": "Deactivates the current agent, returning to default behavior.",
+
+  "remote.resources.available": "Server has %d plugins, %d agents, %d skills available",
+
+  "paste.detected": "📋 Pasted (%d chars, %d lines)",
+  "paste.detected.short": "📋 Pasted (%d chars)"
 }
