feat(coder): embed @coder as builtin plugin with single source of truth
Extract coder logic into pkg/coder/engine/ (stdlib-only, 9 files) and
wire it as a builtin plugin that works out-of-the-box without separate
installation. External plugins on disk still override the builtin.
Standalone binary rewritten as thin ~35-line wrapper importing the engine.

--- a/i18n/locales/pt-BR.json
+++ b/i18n/locales/pt-BR.json
@@ -426,6 +426,7 @@
   "plugin.uninstall.usage": "Uso: /plugin uninstall <nome-do-plugin>",
   "plugin.uninstall.error": " ❌ Erro ao desinstalar o plugin '%s': %v",
   "plugin.uninstall.success": " ✅ Plugin '%s' desinstalado.",
+  "plugin.uninstall.error.not_local": " ❌ Não é possível desinstalar um plugin builtin ou remoto.",
   "plugin.error.manager_disabled": " ❌ O gerenciador de plugins não está disponível. Verifique os logs para erros de inicialização.",
   "plugin.error.unknown_subcommand": "Subcomando de plugin desconhecido: '%s'",
   "plugin.reloading": "Recarregando plugins...",
