--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -426,6 +426,7 @@
   "plugin.uninstall.usage": "Usage: /plugin uninstall <plugin-name>",
   "plugin.uninstall.error": " ❌ Error uninstalling plugin '%s': %v",
   "plugin.uninstall.success": " ✅ Plugin '%s' uninstalled.",
+  "plugin.uninstall.error.not_local": " ❌ Cannot uninstall a builtin or remote plugin.",
   "plugin.error.manager_disabled": " ❌ Plugin manager is not available. Check logs for initialization errors.",
   "plugin.error.unknown_subcommand": "Unknown plugin subcommand: '%s'",
   "plugin.reloading": "Reloading plugins...",
