--- a/i18n/locales/pt-BR.json
+++ b/i18n/locales/pt-BR.json
@@ -426,6 +426,7 @@
   "plugin.uninstall.usage": "Uso: /plugin uninstall <nome-do-plugin>",
   "plugin.uninstall.error": " ❌ Erro ao desinstalar o plugin '%s': %v",
   "plugin.uninstall.success": " ✅ Plugin '%s' desinstalado.",
+  "plugin.uninstall.error.not_local": " ❌ Não é possível desinstalar um plugin builtin ou remoto.",
   "plugin.error.manager_disabled": " ❌ O gerenciador de plugins não está disponível. Verifique os logs para erros de inicialização.",
   "plugin.error.unknown_subcommand": "Subcomando de plugin desconhecido: '%s'",
   "plugin.reloading": "Recarregando plugins...",
@@ -458,5 +459,10 @@
   "help.command.persona_load": "Carrega um agente específico com suas skills.",
   "help.command.persona_skills": "Lista todas as skills disponíveis.",
   "help.command.persona_show": "Mostra detalhes do agente ativo e seu prompt.",
-  "help.command.persona_off": "Desativa o agente atual, voltando ao comportamento padrão."
+  "help.command.persona_off": "Desativa o agente atual, voltando ao comportamento padrão.",
+
+  "remote.resources.available": "Servidor possui %d plugins, %d agentes, %d skills disponíveis",
+
+  "paste.detected": "📋 Colado (%d caracteres, %d linhas)",
+  "paste.detected.short": "📋 Colado (%d caracteres)"
 }
