feat(session): add interactive local/remote session routing when connected to server
Route /session commands to both local and remote backends when connected
via /connect. Save prompts the user to choose local, remote, or both.
List shows sessions from both sources with labeled sections. Load and
delete search both and ask when a session exists in both places. Adds
missing DeleteSession method to the remote gRPC client.

--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -158,6 +158,23 @@
   "session.error_name_required_load": "Error: a name is required to load the session.",
   "session.error_name_required_delete": "Error: a name is required to delete the session.",
   "session.unknown_command": "Unknown session command: '%s'. Use /session to see options.",
+  "session.save_where_prompt": "📦 Where to save session '%s'?",
+  "session.save_option_local": "  [l] Local only",
+  "session.save_option_remote": "  [r] Remote server only",
+  "session.save_option_both": "  [b] Both (local + remote)",
+  "session.save_success_remote": " ✅ Session '%s' saved successfully (remote server).",
+  "session.save_success_both": " ✅ Session '%s' saved locally and on remote server.",
+  "session.list_header_local": "📂 Local sessions:",
+  "session.list_header_remote": "☁️  Remote sessions (server):",
+  "session.load_found_both": "Session '%s' found in both local and remote. Load from?",
+  "session.load_success_remote": " ✅ Session '%s' loaded from remote server. The previous conversation has been restored.",
+  "session.delete_found_both": "Session '%s' found in both local and remote. Delete from?",
+  "session.delete_success_remote": " ✅ Session '%s' deleted from remote server.",
+  "session.delete_success_both": " ✅ Session '%s' deleted from both local and remote server.",
+  "session.option_local": "  [l] Local",
+  "session.option_remote": "  [r] Remote",
+  "session.option_both": "  [b] Both",
+  "session.prompt_choice": " > ",
   "chunk.no_more_chunks": "There are no more file chunks available.",
   "chunk.no_more_pending_but_failed": "There are no more pending chunks, but there are %d failed chunks. Use /retry to retry the last failed chunk or /retryall to retry all.",
   "chunk.sending": "Sending chunk %d of %d... (%d remaining after this one)",
