--- a/i18n/locales/pt-BR.json
+++ b/i18n/locales/pt-BR.json
@@ -158,6 +158,23 @@
   "session.error_name_required_load": "Erro: é necessário fornecer um nome para carregar a sessão.",
   "session.error_name_required_delete": "Erro: é necessário fornecer um nome para deletar a sessão.",
   "session.unknown_command": "Comando de sessão desconhecido: '%s'. Use /session para ver as opções.",
+  "session.save_where_prompt": "📦 Onde salvar a sessão '%s'?",
+  "session.save_option_local": "  [l] Somente local",
+  "session.save_option_remote": "  [r] Somente servidor remoto",
+  "session.save_option_both": "  [b] Ambos (local + remoto)",
+  "session.save_success_remote": " ✅ Sessão '%s' salva com sucesso (servidor remoto).",
+  "session.save_success_both": " ✅ Sessão '%s' salva localmente e no servidor remoto.",
+  "session.list_header_local": "📂 Sessões locais:",
+  "session.list_header_remote": "☁️  Sessões remotas (servidor):",
+  "session.load_found_both": "Sessão '%s' encontrada local e remotamente. Carregar de?",
+  "session.load_success_remote": " ✅ Sessão '%s' carregada do servidor remoto. A conversa anterior foi restaurada.",
+  "session.delete_found_both": "Sessão '%s' encontrada local e remotamente. Deletar de?",
+  "session.delete_success_remote": " ✅ Sessão '%s' deletada do servidor remoto.",
+  "session.delete_success_both": " ✅ Sessão '%s' deletada localmente e do servidor remoto.",
+  "session.option_local": "  [l] Local",
+  "session.option_remote": "  [r] Remoto",
+  "session.option_both": "  [b] Ambos",
+  "session.prompt_choice": " > ",
   "chunk.no_more_chunks": "Não há mais chunks de arquivos disponíveis.",
   "chunk.no_more_pending_but_failed": "Não há mais chunks pendentes, mas existem %d chunks com falha. Use /retry para retentar o último chunk com falha ou /retryall para retentar todos.",
   "chunk.sending": "Enviando chunk %d de %d... (%d restantes após este)",
